Fix z-index ch-layout-splitter's drag-bar

--- a/src/components/layout-splitter/layout-splitter.scss
+++ b/src/components/layout-splitter/layout-splitter.scss
@@ -18,6 +18,7 @@
   position: absolute;
   background-color: currentColor;
   opacity: 0;
+  z-index: 1;
   transition: opacity 120ms linear 200ms;
 
   &:hover,
